--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -1,3 +1,3 @@
-email: 'jekyllserif@example.com'
-phone: '1800 123 000'
+email: 'williamtsecpa@gmail.com'
+phone: '+1-917-499-6966'
 contact_button_link: 'contact'
