--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ logo:
   desktop_height: "36px"
 
 footer:
-  copyright_text: 'Free Jekyll theme by <a class="zerostatic" href="https://www.zerostatic.io">www.zerostatic.io</a>'
+  copyright_text: ''
 
 seo:
   meta_og_title: "Jekyll Serif Theme"
